--- a/style.css
+++ b/style.css
@@ -86,6 +86,23 @@ h1 {
     left: 25px;
 }
 
+.how {
+    background-color: red;
+    min-height: 400px;
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    margin-bottom: 60px;
+}
+  
+.howContainer {
+    background-color: green;
+    min-height: 300px;
+    max-width: 1500px;
+    width: 100%; 
+    margin: 0px 40px 0px 40px;
+}
+  
 .p1, .p2{
     position: relative;
     top: 2px;
