--- a/style.css
+++ b/style.css
@@ -1,22 +1,34 @@
 :root {
+    --highlights: rgb(59, 66, 95);
+    
+    --mainbg: #dbdada;
     --bgcolor: rgb(183, 189, 209);
     --color: rgb(93, 104, 150);
-    --highlights: rgb(59, 66, 95);
-    --text-white: aliceblue;
+    --links: rgb(0, 42, 63);
+    --text: rgb(0, 0, 0);
 }
+.dark-mode {
+    --text: aliceblue;
+    --mainbg: #333333;
+    --bgcolor: #4e4e4e;
+    --color: #ffffff;
+    --links: rgb(0, 145, 217);
+    }
+
 * {
     padding: 0;
     margin: 0;
 }
 body {
-    background-color: #dbdada;
-    color: #000000;
+    background-color: var(--mainbg);
+    color: var(--color);
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     text-decoration: none;
 
 }
 header {
     background-color: var(--bgcolor);
+    color: var(--color);
     height: 65px;
     width: 100%;
     display: flex;
@@ -28,6 +40,12 @@ header img {
     height: 50px;
     width: 50px;
     border-radius: 50%;
+}
+header i {
+    position: absolute;
+    right: 20px;
+    font-size: 20px;
+    cursor: pointer;
 }
 h1 {
     text-align: center;
@@ -94,6 +112,7 @@ h1 {
     align-items: center; 
     margin-bottom: 100px;
     background-color: var(--bgcolor);
+    color: var(--text);
     padding: 60px 0px 60px 0px;
 }
   
@@ -111,6 +130,9 @@ h1 {
     max-width: 600px;
     height: auto;
     border-radius: 10px;
+}
+.howContainer a {
+    color: var(--links);
 }
   
 .p1, .p2{
@@ -133,8 +155,11 @@ textarea {
     outline: none;
     padding-right: 50px;
     margin-top: 40px;
+    background-color: var(--mainbg);
+    color: var(--text);
 }
 textarea::placeholder {
+    color: var(--text);
     opacity: 1;
     transition: all 1.3s ease;
 }
@@ -146,7 +171,7 @@ button {
     margin: 0 20px;
     height: 40px;
     background-color: var(--color);
-    color: var(--text-white);
+    color: var(--mainbg);
     border-radius: 0 0 10px 10px;
     font-size: 17px;
     transition: all 0.3s ease;
@@ -178,7 +203,7 @@ button:hover {
 }
 .contacts a, .socials a, .creator a {
     text-decoration: none;
-    color: rgb(35, 35, 35);
+    color: var(--text);
 }
 .about, .contacts, .socials, .creator {
     padding: 10px;
@@ -187,6 +212,7 @@ button:hover {
 footer {
     position: relative;
     bottom: 0;
+    color: var(--text);
 }
 
 
